# ai-bootcamp

email-agent/: README.md
email-agent/code/: .env.example  .gitignore  Makefile  README.md  email_agent_monitoring.db  generate_evaluation.ipynb  main.py  monitoring_app.py  pyproject.toml  run_evaluation.sh  streamlit_app.py
email-agent/code/.ipynb_checkpoints/: generate_evaluation-checkpoint.ipynb
email-agent/code/email_agent/: __init__.py  agent.py  attachments.py  elasticsearch_store.py  evaluation_schemas.py  gmail_client.py  manual_evaluator.py  schemas.py
email-agent/code/email_agent/instructions/: AGENT_GENERATED_EVALUATION.md  ATTACHMENT_HANDLING.md  ATTACHMENT_IMPLEMENTATION.md  COPY_PASTE_INSTRUCTIONS.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README_EVALUATION.md  SETUP_AND_RUN.md  SETUP_COMPLETE.md  WEEK3_EVALUATION_GUIDE.md
email-agent/code/monitoring/: ANSWERS.md  EVALUATION_GUIDE.md  MANUAL_EVALUATION.md  __init__.py  db.py  schemas.py
email-agent/code/tests/: test_agent.py  test_agent_judge.py
week3/code/: .gitignore  Makefile  main.py  message.json  pyproject.toml  search_agent.py  search_tools.py  streaming_parsing.py  ver1.py  ver2.py  ver3.py  ver4.py
week3/code/evals/: eval_agent_judge.py  eval_agent_run.py  eval_orchestrator.py  evals_common.py  generate_data.py  running_evals
week3/code/notebooks/: 1.ground-truth.ipynb  2.retrieval-evaluation.ipynb  3.evaluations-agent.ipynb  4.evaluations-judge.ipynb  ground_truth_evidently.csv
week3/code/tests/: test_agent.py  test_agent_judge.py  utils.py
(+19 files in other folders)
