[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jaxn>=0.0.1",
    "minsearch>=0.0.7",
    "openai>=1.109.1",
    "pydantic-ai>=1.1.0",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
    "toyaikit>=0.0.4",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
